--- a/index.html
+++ b/index.html
@@ -325,22 +325,14 @@
 							tincidunt erat, et scelerisque turpis ipsum.</p>
 					</section>
 					<section>
-						<h4>Redes Sociales</h4>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/jessafotografia"
-									class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
-							</li>
-							<li><a href="https://www.instagram.com/espejocosmico_/"
-									class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-							</li>
-							<!--<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
-							-->
-							</li>
-						</ul>
-					</section>
+    <h4>Redes Sociales</h4>
+    <ul class="icons">
+        <li><a href="enlace_de_facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+        <li><a href="enlace_de_twitter" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="enlace_de_instagram" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+    </ul>
+</section>
+
 					<p class="copyright">
 
 						&copy; <a href="https://www.facebook.com/polvoramx">Polvora Publicidad 2024</a>.
