--- a/index.html
+++ b/index.html
@@ -324,24 +324,16 @@
 							bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor
 							tincidunt erat, et scelerisque turpis ipsum.</p>
 					</section>
-					<section>
+					
 		<section>
-						<h4>Redes Sociales</h4>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/jessafotografia"
-									class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
-							</li>
-							<li><a href="https://www.instagram.com/espejocosmico_/"
-									class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-							</li>
-							<!--<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
-							-->
-							</li>
-						</ul>
-					</section>
+    <h4>Redes Sociales</h4>
+    <ul class="icons">
+        <li><a href="https://icons8.com/icon/118497/facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+        <li><a href="https://icons8.com/icon/5MQ0gPAYYx7a/twitter" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="https://icons8.com/icon/Xy10Jcu1L2Su/instagram" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+    </ul>
+</section>
+
 
 					<p class="copyright">
 
