--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     <ul class="icons">
         <li><a href="https://www.facebook.com/jessafotografia" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
         <li><a href="https://twitter.com/jessafotografia" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="https://www.instagram.com/jessafotografia/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+        <li><a href="https://www.instagram.com/espejocosmico_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
     </ul>
 </section>
 
