--- a/index.html
+++ b/index.html
@@ -341,29 +341,29 @@
 					</p>
 				</div>
 				<div>
-<!-- 
+ 
 					<section>
 						<h2>Envíame correo..</h2>
-						<form method="post" action="enviar_correo.php">
+						<form action="https://formsubmit.co/ericksaldivarregalado@gmail.com" method="POST">
 							<div class="fields">
 								<div class="field half">
-									<input type="text" name="name" id="name" placeholder="Nombre" required />
+									<input type="text" name="name" id="name" placeholder="Nombre" />
 								</div>
 								<div class="field half">
-									<input type="email" name="email" id="email" placeholder="Email" required />
+									<input type="email" name="email" id="email" placeholder="Email" />
 								</div>
 								<div class="field">
-									<textarea name="message" id="message" rows="4" placeholder="Mensaje"
-										required></textarea>
+									<textarea name="message" id="message" rows="4" placeholder="Mensaje"></textarea>
 								</div>
 							</div>
 							<ul class="actions">
 								<li><input type="submit" value="Enviar" class="primary" /></li>
 							</ul>
 						</form>
+
 					</section>
 
--->
+
 
 
 
