--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 				</div>
 				<div>
  
-					<section>
+						<section>
 						<h2>Envíame correo..</h2>
 						<form action="https://formsubmit.co/ericksaldivarregalado@gmail.com" method="POST">
 							<div class="fields">
@@ -359,10 +359,13 @@
 							<ul class="actions">
 								<li><input type="submit" value="Enviar" class="primary" /></li>
 							</ul>
+							<input type="hidden" name="_next" value="https://jessafoto-github-io.vercel.app/" />
+							<input type="hidden" name="_captcha" value="false">
+
+
 						</form>
 
 					</section>
-
 
 
 
