--- a/index.html
+++ b/index.html
@@ -341,10 +341,29 @@
 					</p>
 				</div>
 				<div>
- 
-						<section>
+ 					<section>
+
 						<h2>Envíame correo..</h2>
 						<form action="https://formsubmit.co/ericksaldivarregalado@gmail.com" method="POST">
+							<label for="name">Nombre</label>
+							<input type="text" name="name" id="name">
+
+							<label for="email">Correo Electrónico</label>
+							<input type="email" name="email" id="email">
+
+							<label for="subject">Asunto</label>
+							<input type="text" name="subject" id="subject">
+
+							<label for="comments">Comentarios</label>
+							<textarea name="comments" id="comments" cols="30" rows="5"></textarea>
+
+							<input type="submit" value="Enviar" class="btn">
+
+
+
+							<!--
+						<form action="https://formsubmit.co/ericksaldivarregalado@gmail.com" method="POST">
+					
 							<div class="fields">
 								<div class="field half">
 									<input type="text" name="name" id="name" placeholder="Nombre" />
@@ -361,12 +380,11 @@
 							</ul>
 							<input type="hidden" name="_next" value="https://jessafoto-github-io.vercel.app/" />
 							<input type="hidden" name="_captcha" value="false">
-
+					-->
 
 						</form>
 
 					</section>
-
 
 
 
