--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 					</p>
 				</div>
 				<div>
- 					<section>
+ 										<section>
 
 						<h2>Envíame correo..</h2>
 						<form action="https://formsubmit.co/ericksaldivarregalado@gmail.com" method="POST">
@@ -358,7 +358,8 @@
 							<textarea name="comments" id="comments" cols="30" rows="5"></textarea>
 
 							<input type="submit" value="Enviar" class="btn">
-
+							<input type="hidden" name="_next" value="https://jessafoto-github-io.vercel.app/">
+							<input type="hidden" name="_captcha" value="false">
 
 
 							<!--
@@ -382,12 +383,12 @@
 							<input type="hidden" name="_captcha" value="false">
 					-->
 
+
+
+
 						</form>
 
 					</section>
-
-
-
 				</div>
 			</div>
 		</footer>
