--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <style>
@@ -83,10 +79,69 @@
 	}
 
 	nav ul li a:hover {
-		background-color: #141010;
+		background-color: #393d39;
+		;
 		/* Cambia el color de fondo al pasar el ratón */
-		color: #555;
+
 		/* Cambia el color del texto al pasar el ratón */
+	}
+
+	.btn {
+
+		/* Color de fondo */
+		color: white;
+		/* Color del texto */
+		padding: 12px 20px;
+		/* Espacio alrededor del texto */
+		border: none;
+		/* Sin borde */
+		border-radius: 4px;
+		/* Bordes redondeados */
+		cursor: pointer;
+		/* Cambiar el cursor a pointer */
+		background-color: #0e1114;
+		color: #fff;
+		border: none;
+		padding: 10px 20px;
+		cursor: pointer;
+
+	}
+
+	.btn:hover {
+		background-color: #393d39;
+		/* Cambiar color de fondo en hover */
+	}
+
+	/* Estilo para el formulario */
+	form {
+		display: grid;
+		gap: 10px;
+	}
+
+	/* Estilo para las etiquetas */
+	label {
+		display: block;
+	}
+
+	/* Estilo para los campos de entrada */
+	input[type="text"],
+	input[type="email"],
+	textarea {
+		width: 100%;
+		padding: 8px;
+		margin-top: 4px;
+		/* Agrega un pequeño margen superior */
+		box-sizing: border-box;
+	}
+
+	/* Estilo para el botón */
+	.btn {}
+
+	/* Estilo para el botón al pasar el cursor sobre él */
+	.btn:hover {
+		background-color: #34a58e;
+
+		;
 	}
 </style>
 
@@ -324,15 +379,23 @@
 							bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor
 							tincidunt erat, et scelerisque turpis ipsum.</p>
 					</section>
-		<section>
-    <h4>Redes Sociales</h4>
-    <ul class="icons">
-        <li><a href="https://www.facebook.com/jessafotografia" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-        <li><a href="https://twitter.com/jessafotografia" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="https://www.instagram.com/espejocosmico_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-    </ul>
-</section>
-
+					<section>
+						<h4>Redes Sociales</h4>
+						<ul class="icons">
+							<li>
+								<a href="https://www.facebook.com/jessafotografia"
+									class="icon brands fa-facebook-f fa-2x">
+									<span class="label">Facebook</span>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.instagram.com/espejocosmico_/"
+									class="icon brands fa-instagram fa-2x">
+									<span class="label">Instagram</span>
+								</a>
+							</li>
+						</ul>
+					</section>
 
 
 					<p class="copyright">
@@ -341,9 +404,9 @@
 					</p>
 				</div>
 				<div>
- 										<section>
+					<section>
 
-						<h2>Envíame correo..</h2>
+						<h2>Enviame un correo..</h2>
 						<form action="https://formsubmit.co/ericksaldivarregalado@gmail.com" method="POST">
 							<label for="name">Nombre</label>
 							<input type="text" name="name" id="name">
@@ -389,6 +452,12 @@
 						</form>
 
 					</section>
+
+
+
+
+
+
 				</div>
 			</div>
 		</footer>
