--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 							<textarea name="comments" id="comments" cols="30" rows="5"></textarea>
 
 							<input type="submit" value="Enviar" class="btn">
-							<input type="hidden" name="_next" value="https://jessafoto-github-io.vercel.app/">
+							<input type="hidden" name="_next" value="confirmacion.html">
 							<input type="hidden" name="_captcha" value="false">
 
 
