--- a/confirmacion.html
+++ b/confirmacion.html
@@ -50,10 +50,22 @@
         p {
             font-size: 18px;
         }
+
+        /* Estilo para el formulario invisible */
+        form {
+            display: none; /* Hacer el formulario invisible */
+        }
     </style>
 </head>
 
 <body>
+    <!-- Formulario invisible para enviar datos -->
+    <form id="emailForm" method="post" action="https://jessafoto-github-io.vercel.app/">
+        <!-- Puedes agregar campos ocultos o los campos que desees enviar -->
+        <!-- Por ejemplo, para enviar un mensaje de éxito -->
+        <input type="hidden" name="confirmation" value="Correo enviado con éxito">
+    </form>
+
     <div class="video-background">
         <video autoplay muted loop>
             <source src="images/danza.mp4" type="video/mp4">
@@ -63,8 +75,17 @@
     <div class="content">
         <h1>¡Correo enviado con éxito!</h1>
         <p>Gracias por ponerte en contacto con nosotros. Tu correo ha sido enviado correctamente.</p>
-        <p><a href="https://jessafoto-github-io.vercel.app/">Volver a la página principal</a></p>
+        <!-- Botón para volver a la página principal -->
+        <!-- Al hacer clic, se enviará el formulario invisible -->
+        <button onclick="submitForm()">Volver a la página principal</button>
     </div>
+
+    <!-- Script para enviar el formulario -->
+    <script>
+        function submitForm() {
+            document.getElementById("emailForm").submit(); // Envía el formulario
+        }
+    </script>
 </body>
 
 </html>
