--- a/confirmacion.html
+++ b/confirmacion.html
@@ -60,7 +60,7 @@
 
 <body>
     <!-- Formulario invisible para enviar datos -->
-    <form id="emailForm" method="post" action="https://jessafoto-github-io.vercel.app/">
+    <form id="emailForm" method="post" action="index.html">
         <!-- Puedes agregar campos ocultos o los campos que desees enviar -->
         <!-- Por ejemplo, para enviar un mensaje de éxito -->
         <input type="hidden" name="confirmation" value="Correo enviado con éxito">
