--- a/confirmacion.html
+++ b/confirmacion.html
@@ -75,8 +75,8 @@
         </video>
     </div>
     <div class="content">
-        <h1>¡Correo enviado con éxito!</h1>
-        <p>Gracias por ponerte en contacto con nosotros. Tu correo ha sido enviado correctamente.</p>
+        <h1>¡Muchas Gracias!</h1>
+        <p>En breve me pondre en contacto contigo..</p>
         <!-- Botón para volver a la página principal -->
         <!-- Al hacer clic, se enviará el formulario invisible -->
         <a href="index.html">Volver a la página principal</a>
