--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 							</li>
 							<li>
 								<a href="https://www.instagram.com/espejocosmico_/"
-									class="icon brands fa-instagram fa-2x">
+									class="fab fa-instagram fa-2x">
 									<span class="label">Instagram</span>
 								</a>
 							</li>
