--- a/index.html
+++ b/index.html
@@ -143,6 +143,146 @@
 
 		;
 	}
+
+	/* Estilo para la sección de redes sociales */
+	section {
+		margin-top: 20px;
+		display: flex;
+		justify-content: flex-start;
+	}
+
+	/* Estilo para los íconos de redes sociales */
+	.icons {
+		list-style: none;
+		padding: 0;
+
+
+	}
+
+	.icons li {
+		margin-bottom: 10px;
+	}
+
+	.icons a {
+		text-decoration: none;
+		color: #555;
+		transition: color 0.3s;
+	}
+
+
+	/* Efecto hover */
+	.icons a:hover svg {
+		transform: scale(1.1);
+	}
+
+
+
+
+
+
+
+	/* Estilo para la sección de redes sociales */
+	section {
+		margin-top: 20px;
+	}
+
+	/* Estilo para los íconos de redes sociales */
+	.icons {
+		list-style: none;
+		padding: 0;
+
+
+	}
+
+	/* Estilo para cada ícono */
+	.icons li {
+		margin-right: 15px;
+		/* Espacio entre los íconos */
+	}
+
+	/* Ajuste para el primer ícono */
+	.icons li:first-child {
+		margin-right: 0;
+		/* Elimina el margen derecho del primer ícono */
+	}
+
+	/* Estilo para los enlaces de los íconos */
+	.icons a {
+		text-decoration: none;
+		color: #555;
+		transition: color 0.3s;
+	}
+
+	/* Efecto hover */
+	.icons a:hover {
+		color: #007bff;
+	}
+
+
+	/* Efecto hover */
+	.icons a:hover svg {
+		transform: scale(1.1);
+	}
+
+
+
+	/* Estilo para la sección de redes sociales */
+	section {
+		margin-top: 20px;
+	}
+
+	/* Estilo para los íconos de redes sociales */
+	.icons {
+		list-style: none;
+		padding: 0;
+		display: flex;
+	}
+
+	/* Estilo para cada ícono */
+	.icons li {
+		margin-right: 15px;
+		/* Espacio entre los íconos */
+	}
+
+	/* Ajuste para el primer ícono */
+	.icons li:first-child {
+		margin-right: 0;
+		/* Elimina el margen derecho del primer ícono */
+	}
+
+	/* Estilo para los enlaces de los íconos */
+	.icons a {
+		text-decoration: none;
+		color: #555;
+		transition: color 0.3s;
+		/* Elimina la línea de enlace que aparece debajo del icono */
+		border-bottom: none;
+	}
+
+	/* Efecto hover */
+	.icons a:hover {
+		color: #007bff;
+	}
+
+	/* Estilo para los íconos */
+	.icons svg {
+		width: 60px;
+		/* Ajusta el tamaño de los íconos */
+		height: 40px;
+		/* Ajusta el tamaño de los íconos */
+		transition: transform 0.3s;
+	}
+
+	/* Efecto hover */
+	.icons a:hover svg {
+		transform: scale(1.1);
+	}
+
+	/* Ajuste de la separación entre los íconos de Facebook e Instagram */
+	.icons li.facebook {
+		margin-right: 30px;
+		/* Espacio adicional para separar los íconos */
+	}
 </style>
 
 
