--- a/confirmacion.html
+++ b/confirmacion.html
@@ -56,6 +56,21 @@
             display: none;
             /* Hacer el formulario invisible */
         }
+
+        /* Estilo para el enlace de volver como botón */
+        .btn-link {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-link:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 
@@ -70,16 +85,15 @@
 
     <div class="video-background">
         <video autoplay muted loop>
-            <source src="images/Danza.mp4" type="video/mp4">
+            <source src="images/danza.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
     <div class="content">
         <h1>¡Muchas Gracias!</h1>
-        <p>En breve me pondre en contacto contigo..</p>
-        <!-- Botón para volver a la página principal -->
-        <!-- Al hacer clic, se enviará el formulario invisible -->
-        <a href="index.html">Volver a la página principal</a>
+        <p>En breve me pondre en contacto contigo.</p>
+        <!-- Botón estilizado como enlace -->
+        <a href="index.html" class="btn-link">Volver a la página principal</a>
     </div>
 
     <!-- Script para enviar el formulario 
