--- a/confirmacion.html
+++ b/confirmacion.html
@@ -85,7 +85,7 @@
 
     <div class="video-background">
         <video autoplay muted loop>
-            <source src="images/danza.mp4" type="video/mp4">
+            <source src="images/Danza.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
