--- a/index.html
+++ b/index.html
@@ -588,27 +588,10 @@
 			<div class="inner split">
 				<div>
 					<section>
-						<h2>Jessa Fotografa Profesional</h2>
+						<h2>JESSA FOTOGRAFÍA</h2>
 						<p>
-						<h3>Bienvenido a mi Portafolio </h3> <br>
-
-						Creatividad, técnica y sensibilidad,
-						<br>
-						me esfuerzo por crear imágenes
-						que transmitan emociones genuinas y cuenten una historia auténtica. Ya sea que esté
-						documentando una boda, una sesión familiar, un retrato individual o cualquier otro evento,
-						mi objetivo es capturar la esencia de cada momento con belleza y elegancia.
-						<br>
-
-						Mi estilo se caracteriza por la naturalidad y la espontaneidad. Me encanta trabajar con la
-						luz natural y los entornos exteriores para crear imágenes que sean orgánicas y atemporales.
-						Cada sesión es una oportunidad para explorar nuevas perspectivas y crear imágenes que
-						reflejen la personalidad y el estilo de mis clientes.
-						<br>
-
-						¡Gracias por visitar mi página y espero tener la oportunidad de trabajar juntos!
-						<br>
-						Jessa - Fotografa Profesional
+					
+					Captura los momentos que quieres recordar por siempre. Agenda tu sesión y obtén un 15% de descuento.
 						</p>
 					</section>
 
