--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
 		/* Hace que el contenedor ocupe toda la altura de la ventana */
 	}
 
-	.photography {
-	
-		/* Ajusta el ancho según tus necesidades */
-	
-		/* Mismo valor que el ancho para crear un círculo */
+.photography {
+		width: 400px;
+		/* Ancho fijo */
+		height: 400px;
+		/* Alto fijo */
 
 		/* Cambiado a un color más discreto */
 		border-radius: 50%;
