--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 	/* Estilo para los enlaces de los íconos */
 	.icons a {
 		text-decoration: none;
-		color: #555;
+		color: #fff;
 		transition: color 0.3s;
 		/* Elimina la línea de enlace que aparece debajo del icono */
 		border-bottom: none;
