--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 	form {
 		display: grid;
 		gap: 10px;
+		color: #ffffff;
 	}
 
 	/* Estilo para las etiquetas */
@@ -140,8 +141,6 @@
 	/* Estilo para el botón al pasar el cursor sobre él */
 	.btn:hover {
 		background-color: #34a58e;
-
-
 		;
 	}
 
@@ -150,6 +149,7 @@
 		margin-top: 20px;
 		display: flex;
 		justify-content: flex-start;
+		color: #ffffff;
 	}
 
 	/* Estilo para los íconos de redes sociales */
@@ -160,25 +160,12 @@
 
 	}
 
-	.icons li {
-		margin-bottom: 10px;
-	}
-
-	.icons a {
-		text-decoration: none;
-		color: #555;
-		transition: color 0.3s;
-	}
 
 
 	/* Efecto hover */
 	.icons a:hover svg {
 		transform: scale(1.1);
 	}
-
-
-
-
 
 
 
@@ -208,36 +195,9 @@
 	}
 
 	/* Estilo para los enlaces de los íconos */
-	.icons a {
-		text-decoration: none;
-		color: #555;
-		transition: color 0.3s;
-	}
-
-	/* Efecto hover */
-	.icons a:hover {
-		color: #007bff;
-	}
-
-
-	/* Efecto hover */
-	.icons a:hover svg {
-		transform: scale(1.1);
-	}
 
 
 
-	/* Estilo para la sección de redes sociales */
-	section {
-		margin-top: 20px;
-	}
-
-	/* Estilo para los íconos de redes sociales */
-	.icons {
-		list-style: none;
-		padding: 0;
-		display: flex;
-	}
 
 	/* Estilo para cada ícono */
 	.icons li {
@@ -285,6 +245,8 @@
 		/* Espacio adicional para separar los íconos */
 	}
 
+
+
 	.photography-container {
 		text-align: center;
 		margin-top: 20px;
@@ -299,14 +261,14 @@
 		/* Hace que el contenedor ocupe toda la altura de la ventana */
 	}
 
-.photography {
+	.photography {
 		width: 380px;
 		/* Ancho fijo */
 		height: 380px;
 		/* Alto fijo */
 
 		/* Cambiado a un color más discreto */
-		border-radius: 50%;
+		border-radius: 100%;
 		/* Hace que el contenedor sea circular */
 		background-image: url('https://i.postimg.cc/05Z8PBWy/57511540-1207412372757705-2704877889425244160-n.jpg');
 		background-size: cover;
@@ -318,6 +280,8 @@
 		/* Alinea el contenido verticalmente */
 	}
 
+
+
 	.photography h2,
 	.photography p {
 		font-size: 30px;
@@ -328,8 +292,13 @@
 		/* Cambiado a una fuente sans-serif */
 		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 		/* Agregado efecto de sombra al texto */
-		margin: 0;
+		margin: 10;
 		/* Elimina el margen predeterminado del texto */
+	}
+
+	p {
+		color: #ffffff;
+		/* Color de texto blanco */
 	}
 </style>
 
