--- a/confirmacion.html
+++ b/confirmacion.html
@@ -101,7 +101,7 @@
         <h1>¡Muchas Gracias!</h1>
         <p>En breve me pondré en contacto contigo.</p>
         <!-- Botón estilizado como enlace -->
-        <a href="index.html" class="btn-link">Volver al Portafolio</a>
+        <a href="index.html" class="btn-link">Ver Portafolio</a>
     </div>
 
     <!-- Script para enviar el formulario 
